# market-regime-analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_README.md  CLAUDE.md  Dockerfile  FINAL_REPORT.md  GEMINI.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  Justfile  Makefile  Market_Regime_Analysis_Demo.ipynb  NEXT_IMPLEMENTATION_PRIORITIES.md  OPTIMIZATION_FINDINGS.md  PLAN.md  PROJECT_ASSESSMENT.md  README.md  SPY_1D_optimization.csv  TRADING_SYSTEM_REVIEW.md  api_server.py  best_params_SPY_1D.json  config.py  docker-compose.postgres.yml  docker-compose.yml  examples.py  main.py  optimization_results.json  optimize_parameters.py  pyproject.toml  run.py  run_fast_optimization.py  run_optimization.py  start_api.py  test_backtest.py  test_calibrator.py  test_engine.py  test_forecasting.py  (+8 more)
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CRITICAL_BUG_FIXES.md  HMM_IMPROVEMENTS.md  README.md  api.md
docs/archive/: FINAL_REPORT.md
examples/: __init__.py  api_client.py  common.py  programmatic.py
market_regime_analysis/: __init__.py  analyzer.py  data_classes.py  data_provider.py  enums.py  hmm_detector.py  portfolio.py  risk_calculator.py  true_hmm_detector.py
market_regime_analysis/api/: __init__.py  auth.py  endpoints.py  models.py  utils.py  websocket.py
market_regime_analysis/backtester/: __init__.py  calibrator.py  engine.py  metrics.py  optimizer.py  strategy.py  transaction_costs.py  walk_forward.py
market_regime_analysis/optimizer/: __init__.py  grid_search.py  objective.py  parameter_space.py
market_regime_analysis/providers/: README.md  __init__.py  polygon_provider.py  yfinance_provider.py
