[project]
name = "market-regime-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpha-vantage>=3.0.0",
    "click>=8.2.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.4"]

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Enable recommended linting rules
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "T20", "SIM", "PL", "RUF"]
ignore = ["E501"]                                                    # Ignore line length for docstrings
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"examples.py" = ["T201"]  # Allow print statements in examples
"test_*.py" = ["T201", "PLC0415"]  # Allow print statements and imports in tests
"main.py" = ["T201"]  # Allow print statements in CLI application
"market_regime_analysis/analyzer.py" = ["T201", "PLR2004", "B023", "B904", "PLR0912", "PLR0915", "PLC0415", "SIM102", "SIM118", "RUF005"]  # Complex analysis module with many patterns
"market_regime_analysis/portfolio.py" = ["T201", "PLR2004"]  # Allow print statements and magic values in portfolio reports
"market_regime_analysis/risk_calculator.py" = ["T201", "PLR2004", "PLR0913"]  # Allow prints and magic values in risk calculator
"market_regime_analysis/hmm_detector.py" = ["PLR2004", "B904", "B023", "PLR0911"]  # Allow magic values and complex patterns in HMM detector
"market_regime_analysis/data_provider.py" = ["PLC0415"]  # Allow conditional imports for optional dependencies

# Enable import sorting (replaces isort)
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["market_regime_analysis"]
