[project]
name = "market-regime-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpha-vantage>=3.0.0",
    "click>=8.2.1",
    "fastapi>=0.104.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.0",
    "polygon-api-client>=1.15.3",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.7.1",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.4"]

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Enable recommended linting rules
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "T20", "SIM", "PL", "RUF"]
ignore = ["E501"]                                                    # Ignore line length for docstrings
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"api_server.py" = ["T201"]  # Allow print statements
"start_api.py" = ["T201"]  # Allow print statements
"main.py" = ["T201"]  # Allow print statements in CLI application
"market_regime_analysis/api/*.py" = ["T201", "PLR2004", "PLR0913"]  # API modules with flexible patterns
"market_regime_analysis/analyzer.py" = ["T201", "PLR2004", "B023", "B904", "PLR0912", "PLR0915", "PLC0415", "SIM102", "SIM118", "RUF005"]  # Complex analysis module with many patterns
"market_regime_analysis/portfolio.py" = ["T201", "PLR2004"]  # Allow print statements and magic values in portfolio reports
"market_regime_analysis/risk_calculator.py" = ["T201", "PLR2004", "PLR0913"]  # Allow prints and magic values in risk calculator
"market_regime_analysis/hmm_detector.py" = ["PLR2004", "B904", "B023", "PLR0911"]  # Allow magic values and complex patterns in HMM detector
"test_*.py" = ["T201", "PLC0415"]  # Allow print statements and imports in tests
"examples/*.py" = ["T201", "PLR2004"]
"*.ipynb" = ["E402", "PLR2004", "RUF001", "T201"]

# Enable import sorting (replaces isort)
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["market_regime_analysis"]
